manifests/lab-1/04-kagent.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kagent
